--- a/example/todomvc/index.html
+++ b/example/todomvc/index.html
@@ -36,9 +36,9 @@
           <a class="brand" href="#">ToDO MVC</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Overview</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#todolist">ToDos</a></li>
               <li><a href="#about">About this</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
