--- a/example/todoexample/index.html
+++ b/example/todoexample/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ToDo MVC</title>
+    <title>ToDo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="todomvc.css" rel="stylesheet">
+    <link href="todoexample.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -51,7 +51,7 @@
     <!-- Le dart
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="application/dart" src="todomvc.dart"></script>
+    <script type="application/dart" src="todoexample.dart"></script>
     <script src="dart.js"></script>
   </body>
 </html>
